# torqmind

./: .clineignore  .cursorignore  .dockerignore  .env.e2e.local  .env.example  .env.production.example  .envexemple  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_TORQMIND_MAP.md  COMPLETE_DELIVERY_SUMMARY.md  CURSOR_SETUP.md  Makefile  PHASE3_FILES_INDEX.md  PHASE3_HANDOFF.md  PHASE3_QUICK_START.md  PHASE3_README.md  PROJECT_CONTEXT.md  README.md  README_PHASE3_START_HERE.md  docker-compose.clickhouse.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.streaming.yml  docker-compose.yml  phase3_migration_guide.md  psql  requirements.txt
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: authz.py  business_time.py  cash_operational_truth.py  config.py  cross_db_audit.py  db.py  db_clickhouse.py  db_compat.py  deps.py  main.py  repos_analytics.py  repos_auth.py  repos_mart.py  repos_mart_clickhouse.py  repos_mart_realtime.py  repos_platform.py  routes_auth.py  routes_bi.py  routes_dashboard.py  routes_etl.py  routes_ingest.py  routes_platform.py  sales_semantics.py  schemas.py  schemas_auth.py  schemas_bi.py  schemas_platform.py  scope.py  security.py  test_business_time.py  test_cash_operational_truth_unit.py  test_cash_payment_mix_unit.py  test_clickhouse_operational_scripts_unit.py  test_cross_db_audit.py  test_dashboard_jarvis_unit.py  test_db_clickhouse_unit.py  test_derived_rebuild_operational_scripts_unit.py  test_etl_orchestration.py  test_ingest_time_parsing.py  test_platform_backoffice.py  (+14 more)
apps/cdc_consumer/: Dockerfile  pyproject.toml  requirements.txt
apps/cdc_consumer/tests/: test_backfill_data_key_coverage.py  test_cdc_consumer.py  test_mart_only_rebuild.py  test_realtime_mart.py
apps/cdc_consumer/torqmind_cdc_consumer/: __init__.py  cli.py  clickhouse_writer.py  config.py  debezium.py  logging.py  (+4 more)
(+327 files in other folders)
