[project]
name = "torqmind-api"
version = "0.1.0"
description = "TorqMind API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-dotenv==1.0.1",
  "psycopg[binary]==3.2.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "passlib[bcrypt]==1.7.4",
  "python-jose==3.3.0",
  "httpx==0.27.2",
  "email-validator>=2.1.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt<4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
