[project]
name = "torqmind-api"
version = "0.1.0"
description = "TorqMind API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-dotenv==1.0.1",
  "psycopg[binary]==3.2.1",
  "psycopg-pool==3.2.4",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "passlib[bcrypt]==1.7.4",
  "python-jose==3.3.0",
  "httpx==0.27.2",
  "email-validator>=2.1.0",
  "PyYAML==6.0.2",
  "pyodbc==5.2.0",
  "pymssql==2.3.7",
  "bcrypt<4",
  "clickhouse-connect>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
