[project]
name = "torqmind-cdc-consumer"
version = "0.1.0"
description = "TorqMind CDC Consumer - Debezium events from Redpanda to ClickHouse"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "clickhouse-connect>=0.7.0",
    "orjson>=3.9.0",
    "structlog>=23.2.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
